# CodeWizard

./: .gitignore  .gitmodules  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.6825476  CMakeLists.txt.user.f9e0c23  ChangeTheMSCToMyForm.py  CodeWizard.sln  CodeWizard.vcxproj  CodeWizard.vcxproj.filters  CombineOutputFromOtherPython.py  FOR_TREE_SITTER_CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  README.md  TO USE LSP.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  codehighlighter.cpp  codehighlighter.h  customhorizontalscrollarea.cpp  customhorizontalscrollarea.h  errorsmenu.cpp  errorsmenu.h  getcolormaptss.cpp  getcolormaptss.h  groqai.cpp  groqai.h  highlightdata.cpp  highlightdata.h  language.cpp  language.h  languageserverclient.cpp  languageserverclient.h  main.cpp  mainwindow.cpp  (+44 more)
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
audio/: Lines.txt
audio/Sams/: RawAudacity.aup3
testhighlight/: cpp.msc  csharp.msc  glsl.msc  go.msc  java.msc  wgsl.msc
